--- a/src/assets/components/image.css
+++ b/src/assets/components/image.css
@@ -2,10 +2,16 @@
     column-count: 3; /* Set the number of columns you want */
     column-gap: 15px; /* Adjust the gap between columns */
     margin: 15px;
+    /* position: relative; */
 }
 
 .masonry-item {
     display: inline-block;
     width: 100%;
     margin-bottom: 15px; /* Adjust the margin between items */
+}
+
+.masonry-item:hover {
+    cursor: pointer;
+    opacity: 0.6;
 }
